Update greeting message and alert in index.html

--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
   <div class="stars" id="stars"></div>
 
   <div class="card">
-    <h1>رمضان كريم يا ولاء  🌙</h1>
+    <h1>رمضان كريم يا ولاء💜🪻  🌙</h1>
     <p>
-      كل عام وأنتِ بخير يا ولاء ، نسأل الله أن يملأ قلبكِ بالسكينة وأن يبارك لكِ في هذا الشهر الفضيل.
+      كل عام وأنتِ بخير ، نسأل الله أن يملأ قلبكِ بالسكينة وأن يبارك لكِ في هذا الشهر الفضيل.
     </p>
     <button onclick="showMessage()">اضغط للتهنئة</button>
   </div>
 
   <script>
     function showMessage() {
-      alert("تقبل الله منا ومنكم صالح الأعمال 🌙✨");
+      alert("💜💜 تقبل الله منا ومنكم صالح الأعمال كل رمضان 🌙🌙اول رمضان مع بعض و باذن الله لاخر العمر مع بعض 🌙✨");
     }
 
     // إنشاء نجوم عشوائية
