Update alert message in showMessage function

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <script>
     function showMessage() {
-      alert("💜💜 تقبل الله منا ومنكم صالح الأعمال كل رمضان 🌙🌙اول رمضان مع بعض و باذن الله لاخر العمر مع بعض 🌙✨");
+      alert("💜💜 تقبل الله منا ومنكم صالح الأعمال  🌙✨اول رمضان مع بعض و باذن الله لاخر العمر مع بعض 💜💜");
     }
 
     // إنشاء نجوم عشوائية
